--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "openai>=1.40.0",
     "pandas>=2.2.2",
     "jupyter>=1.0.0",
+    "openpyxl>=3.1.5",
+    "loguru>=0.7.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
