--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "jupyter>=1.0.0",
     "openpyxl>=3.1.5",
     "loguru>=0.7.2",
+    "matplotlib>=3.9.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
