--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "loguru>=0.7.2",
     "matplotlib>=3.9.2",
     "python-dotenv>=1.0.1",
+    "modal>=0.64.52",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
