--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "python-dotenv>=1.0.1",
     "modal>=0.64.52",
+    "streamlit>=1.37.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
