--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "modal>=0.64.52",
     "streamlit>=1.37.1",
+    "scikit-learn>=1.5.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
